# TrackPerf

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.github/workflows/: format.yaml
TrackPerf/: EfficiencyHists.hxx  FilterTracks.cxx  FilterTracks.hxx  FilterTracksAlg.hxx  ResoHists.hxx  TrackHists.hxx  TrackPerfFile.hxx  TrackPerfHistAlg.hxx  TrackPerfHistProc.hxx  TrackPerfParquet.hxx  TruthHists.hxx
share/: example.xml
src/: EfficiencyHists.cxx  FilterTracks.cxx  FilterTracksAlg.cxx  ResoHists.cxx  TrackHists.cxx  TrackPerfFile.cxx  TrackPerfHistAlg.cxx  TrackPerfHistProc.cxx  TrackPerfParquet.cxx  TruthHists.cxx  config.h.in
